fix padding on small screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1660,6 +1660,53 @@ textarea.form-input::-webkit-resizer {
     padding: 15px;
     margin-bottom: 30px;
   }
+  /**
+     * #SIDEBAR
+     */
+  .sidebar {
+    max-height: 180px;
+    margin-bottom: 30px;
+  }
+  .sidebar.active {
+    max-height: 584px;
+  }
+  .sidebar-info {
+    gap: 25px;
+  }
+  .avatar-box {
+    border-radius: 65px;
+  }
+  .avatar-box img {
+    width: 130px;
+  }
+  .info-content .name {
+    margin-bottom: 0px;
+  }
+  .info-content .title {
+    padding: 5px 18px;
+  }
+  .info_more-btn {
+    top: -15px;
+    right: -15px;
+    padding: 10px 15px;
+  }
+  .info_more-btn span {
+    display: block;
+    font-size: var(--fs-8);
+  }
+  .info_more-btn ion-icon {
+    display: none;
+  }
+  .separator {
+    margin: 32px 0;
+  }
+  .contacts-list {
+    gap: 20px;
+  }
+  .contact-info {
+    max-width: calc(100% - 64px);
+    width: calc(100% - 50px);
+  }
 }
 /* Adjustments for mobile screens */
 @media (max-width: 450px) {
